--- a/modules/impression/templates/impression_disclaimer.html
+++ b/modules/impression/templates/impression_disclaimer.html
@@ -1,32 +1,28 @@
 <link rel="stylesheet" type="text/css" href="<{$icms_url}>/modules/<{$module_dir}>/impressionstyle.css" />
 
-<div align="center">
-	<{$image_header}>
-</div>
+<{$image_header}>
 <div style="clear: both;">&nbsp;</div>
 
 <fieldset style="padding: 8px;">
 
 <h4><{$smarty.const._MD_IMPRESSION_DISCLAIMERAGREEMENT}></h4>
 
-<div>
-	<{$disclaimer}>
-</div>
+<div><{$disclaimer}></div>
 
 <br />
 
 <form action="submit.php" method="post">
 
-<div align="center">
-	<b><{$smarty.const._MD_IMPRESSION_DOYOUAGREE}></b>
-	<br /><br />
-	<input type='button' onclick='location="<{$agree_location}>"' class="button" value='<{$smarty.const._MD_IMPRESSION_AGREE}>' alt='<{$smarty.const._MD_IMPRESSION_AGREE}>' />&nbsp;
-	<input type='button' onclick='location="<{$cancel_location}>"' class="button" value='<{$smarty.const._CANCEL}>' alt='<{$smarty.const._CANCEL}>' />
-	<{if $article_disclaimer == true}>
-		<input type='hidden' name='aid' value='1' class="button" />
-		<input type='hidden' name='cid' value='1' />
-	<{/if}>
-</div>
-	</form>
-	<br />
+	<div align="center">
+		<b><{$smarty.const._MD_IMPRESSION_DOYOUAGREE}></b>
+		<br /><br />
+		<input type='button' onclick='location="<{$agree_location}>"' class="button" value='<{$smarty.const._MD_IMPRESSION_AGREE}>' alt='<{$smarty.const._MD_IMPRESSION_AGREE}>' />&nbsp;
+		<input type='button' onclick='location="<{$cancel_location}>"' class="button" value='<{$smarty.const._CANCEL}>' alt='<{$smarty.const._CANCEL}>' />
+		<{if $article_disclaimer == true}>
+			<input type='hidden' name='aid' value='1' class="button" />
+			<input type='hidden' name='cid' value='1' />
+		<{/if}>
+	</div>
+</form>
+<br />
 </fieldset>
