--- a/modules/impression/templates/impression_topten.html
+++ b/modules/impression/templates/impression_topten.html
@@ -1,34 +1,28 @@
 <link href="<{$icms_url}>/modules/<{$module_dir}>/impressionstyle.css" rel="stylesheet" type="text/css" />
 <{$imageheader}>
-
-<div style="margin-top: 10px; float: right; padding: 2px;"><{$back}></div>
-<div style="clear: both; height: 5px;">&nbsp;</div>
-
-<!-- Start ranking loop --> 
+<div style="clear: both; margin-bottom: 5px; margin-top: 10px; float: right; padding: 2px;"><{$back}></div>
 <{foreach item=ranking from=$rankings}>
-<div style="clear: both; margin-bottom: 5px;"><b><{$smarty.const._MD_IMPRESSION_CATEGORY}>: <{$ranking.title}></b></div>
-<table cellpadding="0" cellspacing="1" width="100%" class="outer"> 
-  <tr> 
-    <th align="center"><{$smarty.const._MD_IMPRESSION_RANK}></th>
-    <th align="left">&nbsp;<{$smarty.const._MD_IMPRESSION_TITLE}></th>
-	<th align="left">&nbsp;<{$smarty.const._MD_IMPRESSION_CATEGORY}></th>
-    <th align="center"><{$smarty.const._MD_IMPRESSION_HITS}></th>
-  </tr>
-  <!-- Start files loop --> 
-<{foreach item=file from=$ranking.file}>
-  <tr> 
-    <td class="head" style="font-weight: bold; text-align:center;"><{$file.rank}></td> 
-	<{if $nice_url}>
-		<td class="impression_even"><a href="singlearticle.php?aid=<{$file.id}>&amp;title=<{$file.nice_link}>"><{$file.title}></a></td>
-	<{else}>
-		<td class="impression_even"><a href="singlearticle.php?cid=<{$file.cid}>&amp;aid=<{$file.id}>"><{$file.title}></a></td>
-	<{/if}>
-	<td class="impression_even"><a href="catview.php?cid=<{$file.cid}>"><{$file.category}></a></td>
-    <td class="impression_even" style="text-align: center;"><{$file.hits}></td> 
-  </tr>
+	<div style="clear: both; margin-bottom: 5px;"><b><{$smarty.const._MD_IMPRESSION_CATEGORY}>: <{$ranking.title}></b></div>
+	<div class="impression_table" style="margin-bottom: 20px;">
+		<div class="impression_tblhdrrow">
+			<div class="impression_tblcell" style="text-align: center;"><{$smarty.const._MD_IMPRESSION_RANK}></div>
+			<div class="impression_tblcell"><{$smarty.const._MD_IMPRESSION_TITLE}></div>
+			<div class="impression_tblcell"><{$smarty.const._MD_IMPRESSION_CATEGORY}></div>
+			<div class="impression_tblcell" style="text-align: center;"><{$smarty.const._MD_IMPRESSION_HITS}></div>
+		</div>
+		<!-- Start files loop --> 
+		<{foreach item=file from=$ranking.file}>
+			<div class="impression_tblrow">
+				<div class="impression_tblhdrcell" style="text-align: center;"><{$file.rank}></div>
+				<{if $nice_url}>
+					<div class="impression_tblcell"><a href="singlearticle.php?aid=<{$file.id}>&amp;title=<{$file.nice_link}>"><{$file.title}></a></div>
+				<{else}>
+					<div class="impression_tblcell"><a href="singlearticle.php?cid=<{$file.cid}>&amp;aid=<{$file.id}>"><{$file.title}></a></div>
+				<{/if}>
+				<div class="impression_tblcell"><a href="catview.php?cid=<{$file.cid}>"><{$file.category}></a></div>
+				<div class="impression_tblcell" style="text-align: center;"><{$file.hits}></div>
+			</div>
+		<{/foreach}>
+		<!-- End links loop-->
+	</div>
 <{/foreach}> 
-  <!-- End links loop--> 
-</table>
-<br /> 
-<{/foreach}> 
-<!-- End ranking loop -->
