--- a/templates/blocks/impression_block_new.html
+++ b/templates/blocks/impression_block_new.html
@@ -1,26 +1,24 @@
 <link href="<{$icms_url}>/modules/<{$dirname}>/impressionstyle.css" rel="stylesheet" type="text/css" />
-<div  class="outer">
-<table border="0" cellspacing="1" cellpadding="0">
-  <tr class="impression_even" style="height: 14px; font-size: 12px; font-weight: bold;">
-      <td style="padding-left: 4px;" class="impression_even"><b><{$smarty.const._MB_IMPRESSION_CATEGORY}></b></td>
-      <td class="impression_even"><b><{$smarty.const._MB_IMPRESSION_ARTICLE}></b></td>
-      <td align="center" class="impression_even"><b><{$smarty.const._MB_IMPRESSION_DATE}></b></td>
-  </tr>
-  <{foreach item=articlenew from=$block.articlenew}>
-  <tr style="text-align: left; font-size: smaller;">
-    <td class="odd"><{$articlenew.cattitle}></td>
-    <td class="odd">
-		<{$articlenew.title}>
-		<{$articlenew.newpopicons}>
-		<{if $icms_isadmin}>
-		  <{$articlenew.adminnewicons}>
-		<{/if}>
-		<{if $articlenew.comment_rules > 0 and $articlenew.comments > 0}> 
-          <{$articlenew.commentz}> 
-		<{/if}>
-	</td>
-    <td class="odd" align="center"><{$articlenew.date}></td>
-  </tr>
-  <{/foreach}>
-</table>
+<div class="impression_table" style="font-size: .8em;">
+	<div class="impression_tblhdrrow">
+		<div class="impression_tblcell"><{$smarty.const._MB_IMPRESSION_CATEGORY}></div>
+		<div class="impression_tblcell"><{$smarty.const._MB_IMPRESSION_ARTICLE}></div>
+		<div class="impression_tblcell" style="text-align: center;"><{$smarty.const._MB_IMPRESSION_DATE}></div>
+	</div>
+	<{foreach item=articlenew from=$block.articlenew}>
+		<div class="impression_tblrow">
+			<div class="impression_tblhdrcell"><{$articlenew.cattitle}></div>
+			<div class="impression_tblcell">
+				<{$articlenew.title}>
+				<{$articlenew.newpopicons}>
+				<{if $icms_isadmin}>
+					<{$articlenew.adminnewicons}>
+				<{/if}>
+				<{if $articlenew.comment_rules > 0 and $articlenew.comments > 0}> 
+					<{$articlenew.commentz}>
+				<{/if}>
+			</div>
+			<div class="impression_tblcell" style="text-align: center;"><{$articlenew.date}></div>
+		</div>
+	<{/foreach}>
 </div>
