--- a/templates/blocks/impression_block_news.html
+++ b/templates/blocks/impression_block_news.html
@@ -1,27 +1,26 @@
-<link href="<{$xoops_url}>/modules/<{$dirname}>/impressionstyle.css" rel="stylesheet" type="text/css" />
+<link href="<{$icms_url}>/modules/<{$dirname}>/impressionstyle.css" rel="stylesheet" type="text/css" />
 <{foreach item=articlenews from=$block.articlenews}>
-<div class="impression_articleTitle"><{$articlenews.title}></div>
-<div id="impression_main" class="impression_articleMain">
-	<div style="text-align: right; font-size: 75%; margin-right: 5px;">
-	<{$smarty.const._MB_IMPRESSION_PUBLISHEDON}><{$articlenews.date|wordwrap:50:"\n":true}><{$smarty.const._MB_IMPRESSION_BY}><{$articlenews.submitter}>&nbsp;<{$articlenews.hits|wordwrap:50:"\n":true}>
+	<div class="impression_articleTitle"><{$articlenews.title}></div>
+	<div id="impression_main" class="impression_articleMain">
+		<div style="text-align: right; font-size: 75%; margin-right: 5px;">
+			<{$smarty.const._MB_IMPRESSION_PUBLISHEDON}><{$articlenews.date|wordwrap:50:"\n":true}><{$smarty.const._MB_IMPRESSION_BY}><{$articlenews.submitter}>&nbsp;<{$articlenews.hits|wordwrap:50:"\n":true}>
+		</div>
+		<{$articlenews.introtext}>
 	</div>
-	<div style="display: table;"><{$articlenews.introtext}></div>
-</div>
-<div class="impression_articleFooter">
-    <span style="float: left;">
-	<{if $articlenews.bytesmore > 0}>&nbsp;<{$articlenews.readmore}>
-		<{if $articlenews.options == 1}>&nbsp;|&nbsp;<{$articlenews.bytesmore}>&nbsp;<{$smarty.const._MB_IMPRESSION_BYTESMORE}><{/if}>
-		<{if $articlenews.options == 2}>&nbsp;|&nbsp;<{$articlenews.description|count_words}>&nbsp;<{$smarty.const._MB_IMPRESSION_WORDSMORE}><{/if}>
-		<{if $articlenews.options == 3}>&nbsp;|&nbsp;<{$articlenews.description|count_characters}>&nbsp;<{$smarty.const._MB_IMPRESSION_CHARSMORE}><{/if}>
-	<{/if}>
-	</span>
-	<span style="float: right;"> 
-    <{if $articlenews.comment_rules > 0 and $articlenews.comments > 0}> 
-        <{$articlenews.commentz}> 
-    <{/if}> 
-	</span>
-    <div style="float: right;"><span><{if $icms_isadmin}> <small><{$articlenews.adminarticle}>&nbsp;</small><{/if}></span></div>
-    </div>
-<div style="height: 4px;">&nbsp;</div>
+	<div class="impression_articleFooter">
+		<span style="float: left;">
+			<{if $articlenews.bytesmore > 0}>&nbsp;<{$articlenews.readmore}>
+				<{if $articlenews.options == 1}>&nbsp;|&nbsp;<{$articlenews.bytesmore}>&nbsp;<{$smarty.const._MB_IMPRESSION_BYTESMORE}><{/if}>
+				<{if $articlenews.options == 2}>&nbsp;|&nbsp;<{$articlenews.description|count_words}>&nbsp;<{$smarty.const._MB_IMPRESSION_WORDSMORE}><{/if}>
+				<{if $articlenews.options == 3}>&nbsp;|&nbsp;<{$articlenews.description|count_characters}>&nbsp;<{$smarty.const._MB_IMPRESSION_CHARSMORE}><{/if}>
+			<{/if}>
+		</span>
+		<span style="float: right;">
+			<{if $articlenews.comment_rules > 0 and $articlenews.comments > 0}>
+				<{$articlenews.commentz}>
+			<{/if}>
+		</span>
+		<div style="float: right;"><span><{if $icms_isadmin}> <small><{$articlenews.adminarticle}>&nbsp;</small><{/if}></span></div>
+	</div>
 <{/foreach}>
 <div align="center" style="padding: 2px;"><{$articlenews.impression_feed}></div>
