--- a/templates/impression_moduleabout.html
+++ b/templates/impression_moduleabout.html
@@ -1,239 +1,235 @@
 <script language="javascript" src="<{$icms_url}>/include/linkexternal.js"></script>
-<div style="clear: both;">&nbsp;</div>
-<img src="<{$module_url}><{$module_image}>" alt="<{$module_name}>" style="float: <{$smarty.const._GLOBAL_LEFT}>; margin-right: 10px;"/></a>
+<link href="<{$icms_url}>/modules/<{$module_dirname}>/impressionstyle.css" rel="stylesheet" type="text/css" />
 
-<div style="margin-top: 1px; color: #33538e; margin-bottom: 4px; font-size: 18px; line-height: 18px; font-weight: bold;">
-	<{$module_name}> version <{$module_version}><{if $module_status_version}> (<{$module_status_version}>)<{/if}>
-</div>
-
-<div style="line-height: 16px; font-weight: bold;">
-	<{$smarty.const._MODABOUT_IMPRESSION_BY}> <{$module_author_name}>
-</div>
-
-<div style="line-height: 16px;">
-	 <{$module_license}>
+<div style="margin-top: 15px; margin-bottom: 10px;">
+	<img src="<{$module_url}><{$module_image}>" alt="<{$module_name}>" style="float: <{$smarty.const._GLOBAL_LEFT}>; margin-right: 10px;" />
+	<div style="color: #33538e; margin-bottom: 4px; font-size: 18px; font-weight: bold; padding-left: 50px;">
+		<{$module_name}> version <{$module_version}><{if $module_status_version}> (<{$module_status_version}>)<{/if}>
+	</div>
+	<div style="font-weight: bold; padding-left: 50px;">	<{$smarty.const._MODABOUT_IMPRESSION_BY}> <{$module_author_name}></div>
+	<div style="padding-left: 50px;"><{$module_license}></div>
 </div>
 
 <{if $module_credits}>
-	<table width="100%" cellspacing="1" cellpadding="3" border="0" class="outer" style="margin-top: 15px;">
-		<tr>
-			<td class="bg3"><b><{$smarty.const._MODABOUT_IMPRESSION_DEVELOPER_CREDITS}></b></td>
-		</tr>
-
-		<tr>
-			<td class="even"><{$module_credits}></td>
-		</tr>
-	</table>
+	<div class="impression_table">
+		<div class="impression_tblhdrrow">
+			<div class="impression_tblcell"><{$smarty.const._MODABOUT_IMPRESSION_DEVELOPER_CREDITS}></div>
+		</div>
+		<div class="impression_tblcell"><{$module_credits}></div>
+	</div>
 <{/if}>
 
-<table width="100%" cellspacing="1" cellpadding="3" border="0" class="outer" style="margin-top: 15px;">
-	<tr>
-		<td colspan='2' class="bg3"><b><{$smarty.const._MODABOUT_IMPRESSION_MODULE_INFO}></b></td>
-	</tr>
+<br />
 
-	<tr>
-		<td class="head" width="200px"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_RELEASE_DATE}></td>
-		<td class="even"><{$module_date}></td>
-	</tr>
+<div class="impression_table">
+	<div class="impression_tblhdrrow">
+		<div style="display: table-cell; padding: 3px;"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_INFO}></div>
+		<div style="display: table-cell; padding: 3px;"> </div>
+	</div>
 	
-	<tr>
-		<td class="head" width="200px"><{$smarty.const._MODABOUT_IMPRESSION_VERSION}></td>
-		<td class="even"><{$module_version}></td>
-	</tr>
+	<div class="impression_tblrow">
+		<div class="impression_tblhdrcell" style="width: 300px;"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_RELEASE_DATE}></div>
+		<div class="impression_tblcell"><{$module_date}></div>
+	</div>
 
-	<tr>
-		<td class="head" width="200px"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_STATUS}></td>
-		<td class="even"><{$module_status}></td>
-	</tr>
+	<div class="impression_tblrow">
+		<div class="impression_tblhdrcell"><{$smarty.const._MODABOUT_IMPRESSION_VERSION}></div>
+		<div class="impression_tblcell"><{$module_version}></div>
+	</div>
+
+	<div class="impression_tblrow">
+		<div class="impression_tblhdrcell"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_STATUS}></div>
+		<div class="impression_tblcell"><{$module_status}></div>
+	</div>
 
 	<{if $module_demo_site_name}>
-		<tr>
-			<td class="head" width="200px"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_DEMO}></td>
-			<td class="even"><a href="<{$module_developer_demo_site_url}>" rel="external"><{$module_demo_site_name}></a></td>
-		</tr>
+		<div class="impression_tblrow">
+			<div class="impression_tblhdrcell"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_DEMO}></div>
+			<div class="impression_tblcell"><a href="<{$module_developer_demo_site_url}>" rel="external"><{$module_demo_site_name}></a></div>
+		</div>
 	<{/if}>
 
 	<{if $module_support_site_name}>
-		<tr>
-			<td class="head" width="200px"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_SUPPORT}></td>
-			<td class="even"><a href="<{$module_support_site_url}>" rel="external"><{$module_support_site_name}></a></td>
-		</tr>
+		<div class="impression_tblrow">
+			<div class="impression_tblhdrcell"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_SUPPORT}></div>
+			<div class="impression_tblcell"><a href="<{$module_support_site_url}>" rel="external"><{$module_support_site_name}></a></div>
+		</div>
 	<{/if}>
 
 	<{if $module_submit_bug}>
-		<tr>
-			<td class="head" width="200px"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_BUG}></td>
-			<td class="even"><a href="<{$module_submit_bug}>" rel="external"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_SUBMIT_BUG}></a></td>
-		</tr>
+		<div class="impression_tblrow">
+			<div class="impression_tblhdrcell"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_BUG}></div>
+			<div class="impression_tblcell"><a href="<{$module_submit_bug}>" rel="external"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_SUBMIT_BUG}></a></div>
+		</div>
 	<{/if}>
 
 	<{if $module_submit_feature}>
-		<tr>
-			<td class="head" width="200px"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_FEATURE}></td>
-			<td class="even"><a href="<{$module_submit_feature}>" rel="external"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_SUBMIT_FEATURE}></a></td>
-		</tr>
+		<div class="impression_tblrow">
+			<div class="impression_tblhdrcell"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_FEATURE}></div>
+			<div class="impression_tblcell"><a href="<{$module_submit_feature}>" rel="external"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_SUBMIT_FEATURE}></a></div>
+		</div>
 	<{/if}>
-</table>
 
-<table width="100%" cellspacing="1" cellpadding="3" border="0" class="outer" style="margin-top: 15px;">
-	<tr>
-		<td colspan="2" class="bg3">
-			<b><{$smarty.const._MODABOUT_IMPRESSION_AUTHOR_INFO}></b>
-		</td>
-	</tr>
+</div>
+
+<br />
+
+<div class="impression_table">
+	<div class="impression_tblhdrrow">
+		<div style="display: table-cell; padding: 3px;"><{$smarty.const._MODABOUT_IMPRESSION_AUTHOR_INFO}></div>
+		<div style="display: table-cell; padding: 3px;"> </div>
+	</div>
 
 	<{if $module_developer_lead}>
-		<tr>
-			<td class="head" width="150px"><{$smarty.const._MODABOUT_IMPRESSION_DEVELOPER_LEAD}></td>
-			<td class="even"><{$module_developer_lead}></td>
-		</tr>
+		<div class="impression_tblrow">
+			<div class="impression_tblhdrcell" style="width: 300px;"><{$smarty.const._MODABOUT_IMPRESSION_DEVELOPER_LEAD}></div>
+			<div class="impression_tblcell"><{$module_developer_lead}></div>
+		</div>
 	<{/if}>
 
 	<{if $module_developer_contributor}>
-		<tr>
-			<td class="head" width="150px"><{$smarty.const._MODABOUT_IMPRESSION_DEVELOPER_CONTRIBUTOR}></td>
-			<td class="even"><{$module_developer_contributor}></td>
-		</tr>
+		<div class="impression_tblrow">
+			<div class="impression_tblhdrcell" style="width: 300px;"><{$smarty.const._MODABOUT_IMPRESSION_DEVELOPER_CONTRIBUTOR}></div>
+			<div class="impression_tblcell"><{$module_developer_contributor}></div>
+		</div>
 	<{/if}>
 
 	<{if $module_people_developers}>
-		<tr>
-			<td class="head" style="vertical-align: top;" width="150px"><{$smarty.const._MODABOUT_IMPRESSION_PEOPLE_DEVELOPERS}></td>
-			<td class='even'>
-			    <{foreach item=person from=$module_people_developers}>
-			    	<div><{$person}></div>
-			    <{/foreach}>
-			</td>
-		</tr>
+		<div class="impression_tblrow">
+			<div class="impression_tblhdrcell" style="width: 300px;"><{$smarty.const._MODABOUT_IMPRESSION_PEOPLE_DEVELOPERS}></div>
+			<div class="impression_tblcell">
+				<{foreach item=person from=$module_people_developers}>
+					<div><{$person}></div>
+				<{/foreach}>
+			</div>
+		</div>
 	<{/if}>
 
 	<{if $module_people_testers}>
-		<tr>
-			<td class="head" style="vertical-align: top;" width="150px"><{$smarty.const._MODABOUT_IMPRESSION_PEOPLE_TESTERS}></td>
-			<td class="even">
-			    <{foreach item=person from=$module_people_testers}>
-			    	<div><{$person}></div>
-			    <{/foreach}>
-			</td>
-		</tr>
+		<div class="impression_tblrow">
+			<div class="impression_tblhdrcell" style="width: 300px;"><{$smarty.const._MODABOUT_IMPRESSION_PEOPLE_TESTERS}></div>
+			<div class="impression_tblcell">
+				<{foreach item=person from=$module_people_testers}>
+					<div><{$person}></div>
+				<{/foreach}>
+			</div>
+		</div>
 	<{/if}>
 
 	<{if $module_people_translators}>
-		<tr>
-			<td class="head" style="vertical-align: top;" width="150px"><{$smarty.const._MODABOUT_IMPRESSION_PEOPLE_TRANSLATERS}></td>
-			<td class="even">
-			    <{foreach item=person from=$module_people_translators}>
-			    	<div><{$person}></div>
-			    <{/foreach}>
-			</td>
-		</tr>
+		<div class="impression_tblrow">
+			<div class="impression_tblhdrcell" style="width: 300px;"><{$smarty.const._MODABOUT_IMPRESSION_PEOPLE_TRANSLATERS}></div>
+			<div class="impression_tblcell">
+				<{foreach item=person from=$module_people_translators}>
+					<div><{$person}></div>
+				<{/foreach}>
+			</div>
+		</div>
 	<{/if}>
 
 	<{if $module_people_documenters}>
-		<tr>
-			<td class="head" style="vertical-align: top;" width="150px"><{$smarty.const._MODABOUT_IMPRESSION_PEOPLE_DOCUMENTERS}></td>
-			<td class="even">
-			    <{foreach item=person from=$module_people_documenters}>
-			    	<div><{$person}></div>
-			    <{/foreach}>
-			</td>
-		</tr>
+		<div class="impression_tblrow">
+			<div class="impression_tblhdrcell" style="width: 300px;"><{$smarty.const._MODABOUT_IMPRESSION_PEOPLE_DOCUMENTERS}></div>
+			<div class="impression_tblcell">
+				<{foreach item=person from=$module_people_documenters}>
+					<div><{$person}></div>
+				<{/foreach}>
+			</div>
+		</div>
 	<{/if}>
 
 	<{if $module_people_other}>
-		<tr>
-			<td class="head" style="vertical-align: top;" width="150px"><{$smarty.const._MODABOUT_IMPRESSION_PEOPLE_OTHER}></td>
-			<td class="even">
-			    <{foreach item=person from=$module_people_other}>
-			    	<div><{$person}></div>
-			    <{/foreach}>
-			</td>
-		</tr>
+		<div class="impression_tblrow">
+			<div class="impression_tblhdrcell" style="width: 300px;"><{$smarty.const._MODABOUT_IMPRESSION_PEOPLE_OTHER}></div>
+			<div class="impression_tblcell">
+				<{foreach item=person from=$module_people_other}>
+					<div><{$person}></div>
+				<{/foreach}>
+			</div>
+		</div>
 	<{/if}>
 
 	<{if $module_developer_website_url}>
-		<tr>
-			<td class="head" width="150px"><{$smarty.const._MODABOUT_IMPRESSION_DEVELOPER_WEBSITE}></td>
-			<td class="even"><a href="<{$module_developer_website_url}>" rel="external"><{$module_developer_website_name}></a></td>
-		</tr>
+		<div class="impression_tblrow">
+			<div class="impression_tblhdrcell" style="width: 300px;"><{$smarty.const._MODABOUT_IMPRESSION_DEVELOPER_WEBSITE}></div>
+			<div class="impression_tblcell"><a href="<{$module_developer_website_url}>" rel="external"><{$module_developer_website_name}></a></div>
+		</div>
 	<{/if}>
 
 	<{if $module_developer_email}>
-		<tr>
-			<td class="head" width="150px"><{$smarty.const._MODABOUT_IMPRESSION_DEVELOPER_EMAIL}></td>
-			<td class="even"><a href="mailto:<{$module_developer_email}>" rel="external"><{$module_developer_email}></a></td>
-		</tr>
+		<div class="impression_tblrow">
+			<div class="impression_tblhdrcell" style="width: 300px;"><{$smarty.const._MODABOUT_IMPRESSION_DEVELOPER_EMAIL}></div>
+			<div class="impression_tblcell"><a href="mailto:<{$module_developer_email}>" rel="external"><{$module_developer_email}></a></div>
+		</div>
 	<{/if}>
-</table>
-
+</div>
 
 <{if $module_manual}>
-<table width="100%" cellspacing="1" cellpadding="3" border="0" class="outer" style="margin-top: 15px;">
-	<tr>
-		<td colspan="2" class="bg3"><b><{$smarty.const._MODABOUT_IMPRESSION_MANUAL}></b></td>
-	</tr>
-		<tr>
-			<td class="head" style="vertical-align: top;" width="150px"><{$smarty.const._MODABOUT_IMPRESSION_MANUAL_WIKI}></td>
-			<td class="even">
-				<{foreach item=manual from=$module_manual}>
-					<div><{$manual}></div>
-				<{/foreach}>
-			</td>
-		</tr>	
-</table>
+	<br />
+	<div class="impression_table">
+		<div class="impression_tblhdrrow">
+			<div style="padding: 3px; font-weight: bold;" class="bg3">&nbsp;<{$smarty.const._MODABOUT_IMPRESSION_MANUAL}></div>
+			<div style="display: table-cell; padding: 3px;"> </div>
+		</div>
+		<div class="impression_tblhdrcell" style="width: 300px;"><{$smarty.const._MODABOUT_IMPRESSION_MANUAL_WIKI}></div>
+		<div class="impression_tblcell">
+			<{foreach item=manual from=$module_manual}>
+				<div><{$manual}></div>
+			<{/foreach}>
+		</div>
+	</div>
 <{/if}>
 
 <{if $module_warning}>
-	<table width="100%" cellspacing="1" cellpadding="3" border="0" class="outer" style="margin-top: 15px;">
-		<tr>
-			<td class="bg3"><b><{$smarty.const._MODABOUT_IMPRESSION_MODULE_DISCLAIMER}></b></td>
-		</tr>
-
-		<tr>
-			<td class="even"><{$module_warning}></td>
-		</tr>
-		<tr>
-			<td class="even"><{$smarty.const._MODABOUT_IMPRESSION_WARNINGTEXT}></td>
-		</tr>
-	</table>
+	<br />
+	<div class="impression_table">
+		<div class="impression_tblhdrrow">
+			 <div style="display: table-cell; padding: 3px;"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_DISCLAIMER}></div>
+		</div>
+		<div class="impression_tblrow">
+			<div class="impression_tblcell"><{$module_warning}></div>
+		</div>
+		<div class="impression_tblrow">
+			<div class="impression_tblcell"><{$smarty.const._MODABOUT_IMPRESSION_WARNINGTEXT}></div>
+		</div>
+	</div>
 <{/if}>
 
 <{if $module_author_word}>
-	<table width="100%" cellspacing="1" cellpadding="3" border="0" class="outer" style="margin-top: 15px;">
-		<tr>
-			<td class="bg3"><b><{$smarty.const._MODABOUT_IMPRESSION_AUTHOR_WORD}></b></td>
-		</tr>
-
-		<tr>
-			<td class="even"><{$module_author_word}></td>
-		</tr>
-	</table>
+	<div style="display: block; border: 0; margin-top: 15px;" class="outer">
+		<div style="padding: 3px; font-weight: bold;" class="bg3">&nbsp;<{$smarty.const._MODABOUT_IMPRESSION_AUTHOR_WORD}></div>
+		<div class="even"><{$module_author_word}></div>
+	</div>
 <{/if}>
 
 <{if $module_version_history}>
-	<table width="100%" cellspacing="1" cellpadding="3" border="0" class="outer" style="margin-top: 15px;">
-		<tr>
-			<td class="bg3"><b><{$smarty.const._MODABOUT_IMPRESSION_VERSION_HISTORY}></b></td>
-		</tr>
-
-		<tr>
-			<td class="even">
-				<div style="overflow-y: auto; height: 500px; line-height: 18px;"><{$module_version_history}></div>
-			</td>
-		</tr>
-	</table>
+	<br />
+	<div class="impression_table">
+		<div class="impression_tblhdrrow">
+			 <div style="display: table-cell; padding: 3px;"><{$smarty.const._MODABOUT_IMPRESSION_VERSION_HISTORY}></div>
+		</div>
+		<div class="impression_tblrow">
+			<div class="impression_tblcell" style="padding: 0px;">
+				<div style="padding: 4px; overflow-y: auto; height: 500px;">
+					<{$module_version_history}>
+				</div>
+			</div>
+		</div>
+	</div>
 <{/if}>
 
 <{if $module_license_txt}>
-<table width="100%" cellspacing="1" cellpadding="3" border="0" class="outer" style="margin-top: 15px;">
-	<tr>
-		<td class="bg3"><b><{$smarty.const._MODABOUT_IMPRESSION_MODULE_LICENSE}></b></td>
-	</tr>
-
-	<tr>
-		<td class="even">
-			<div style="overflow-y: auto; height: 500px; line-height: 18px;"><{$module_license_txt}></div>
-		</td>
-	</tr>
-</table>
+	<br />
+	<div class="impression_table">
+		<div class="impression_tblhdrrow">
+			 <div style="display: table-cell; padding: 3px;"><{$smarty.const._MODABOUT_IMPRESSION_MODULE_LICENSE}></div>
+		</div>
+		<div class="impression_tblrow">
+			<div class="impression_tblcell" style="padding: 0px;">
+				<div style="padding: 4px; overflow-y: auto; height: 500px;">
+					<{$module_license_txt}>
+				</div>
+			</div>
+		</div>
+	</div>
 <{/if}>
