Applied font-size to cells
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk@23211 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/modules/impression/templates/impression_topten.html
+++ b/modules/impression/templates/impression_topten.html
@@ -12,7 +12,7 @@
 		</div>
 		<!-- Start files loop --> 
 		<{foreach item=file from=$ranking.file}>
-			<div class="impression_tblrow">
+			<div class="impression_tblrow" style="font-size: .9em;">
 				<div class="impression_tblhdrcell" style="text-align: center;"><{$file.rank}></div>
 				<{if $nice_url}>
 					<div class="impression_tblcell"><a href="singlearticle.php?aid=<{$file.id}>&amp;title=<{$file.nice_link}>"><{$file.title}></a></div>
