Updated styling + changelog
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk/modules/impression@23212 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/impressionstyle.css
+++ b/impressionstyle.css
@@ -176,7 +176,7 @@ tr.impression_even td {
 	border-right: 1px solid #ccc;
 	border-top: 1px solid #ccc;
 	font-weight: bold;
-	background-color: #f5e9cd;
+	background-color: #f2f2f2;
 	padding: 3px; }
 
 /* Bookmark tags */
