--- a/templates/impression_singlearticle.html
+++ b/templates/impression_singlearticle.html
@@ -31,12 +31,10 @@
 
 <{$article.imageheader}>
 
-<div>
+<div style="display: table; width: 100%; margin-bottom: 10px;">
 	<span class="impression_articlepath"><{$article.path}></span>
 	<span style="float: right; padding: 2px;"><{$back}></span>
 </div>
-
-<div style="clear: both;">&nbsp;</div>
 
 <div class="impression_articleTitle"><{$article.title}><{$article.icons}></div>
 
