--- a/modules/impression/impressionstyle.css
+++ b/modules/impression/impressionstyle.css
@@ -176,7 +176,7 @@ tr.impression_even td {
 	border-right: 1px solid #ccc;
 	border-top: 1px solid #ccc;
 	font-weight: bold;
-	background-color: #f5e9cd;
+	background-color: #f2f2f2;
 	padding: 3px; }
 
 /* Bookmark tags */
