Changed way comments per article are counted
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk@23315 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/modules/impression/templates/blocks/impression_block_spot.html
+++ b/modules/impression/templates/blocks/impression_block_spot.html
@@ -15,11 +15,9 @@
 				<{if $articlespot.options == 3}>&nbsp;|&nbsp;<{$articlespot.description|count_characters}>&nbsp;<{$smarty.const._MB_IMPRESSION_CHARSMORE}><{/if}>
 			<{/if}>
 		</span>
-		<span style="float: right;">
-			<{if $articlespot.comment_rules > 0 and $articlespot.comments > 0}>
-				<{$articlespot.commentz}>
-			<{/if}>
-		</span>
+		<{if $articlespot.comment_rules > 0 and $articlespot.comments > 0}>
+			<span style="float: right;"><{$articlespot.commentz}></span>
+		<{/if}>
 		<div style="float: right;"><span><{if $icms_isadmin}> <small><{$articlespot.adminarticle}>&nbsp;</small><{/if}></span></div>
 	</div>
 <{/foreach}>
