--- a/modules/impression/templates/impression_singlearticle.html
+++ b/modules/impression/templates/impression_singlearticle.html
@@ -50,7 +50,7 @@
 	<{$article.description2}>
 	<{$pagenav}>
 	<{$article.source}>
-	<{if $tagbar}><div class="impression_tags"><{include file="db:tag_bar.html"}></div><{/if}>
+	<!-- <{if $tagbar}><div class="impression_tags"><{include file="db:tag_bar.html"}></div><{/if}> -->
 	<{$article.socialbutton}>
 </div>
 
