Added link to manual to About page
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk/modules/impression@23808 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/impressionstyle.css
+++ b/impressionstyle.css
@@ -157,6 +157,19 @@ tr.impression_even td {
 	border: 1px solid #ccc;
 	border-collapse: collapse; }
 
+.impression_tblhdr {
+	display: table-block;
+	font-weight: bold;
+	padding: 3px;
+	background-image: url(images/icon/backgnd.png);
+	background-position: center bottom;
+	background-repeat: repeat-x;
+	background-size: contain;
+	margin-right: -1px;
+	border-top: 1px solid #ccc;
+	border-right: 1px solid #ccc;
+	border-left: 1px solid #ccc; }
+
 .impression_tblhdrrow {
 	display: table-header-group;
 	font-weight: bold;
