Replaced 'date' with 'published'
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk@23834 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/modules/impression/templates/blocks/impression_block_new.html
+++ b/modules/impression/templates/blocks/impression_block_new.html
@@ -18,7 +18,7 @@
 					<{$articlenew.commentz}>
 				<{/if}>
 			</div>
-			<div class="impression_tblcell" style="text-align: center;"><{$articlenew.date}></div>
+			<div class="impression_tblcell" style="text-align: center;"><{$articlenew.published}></div>
 		</div>
 	<{/foreach}>
 </div>
